Fixed mobile layout issues

--- a/src/app/components/startpage/skills/skills.component.scss
+++ b/src/app/components/startpage/skills/skills.component.scss
@@ -2,8 +2,8 @@
 
 .form-groups {
     display: flex;
-    justify-content: center;
     padding-bottom: 30px;
+    flex-wrap: wrap;
 }
 
 .form-group {
